# spuc_filter

./: .travis.linux  .travis.yml  CMakeLists.txt  README.md  des_filter.cpp  des_filter.h  mainwindow.cpp  mainwindow.ui  make_filter.cpp  make_filter.h  other_freq.cpp  other_freq.h  ui_mainwindow.h
